# dramatiq-redis-streams

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/dramatiq_redis_streams/: __init__.py  broker.py  consumer.py  delayed.py  keys.py
src/dramatiq_redis_streams/dashboard/: __init__.py  __main__.py  api.py  app.py  django.py  page.py
tests/: conftest.py  test_broker.py  test_consumer.py  test_dashboard_api.py  test_dashboard_app.py  test_delayed.py  test_integration.py  test_keys.py
