[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dramatiq-redis-streams"
version = "0.1.0"
description = "A Redis Streams broker for Dramatiq — event-driven, zero-polling message processing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sylvain Zimmer", email = "sylvain@sylvainzimmer.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    # Verified against the 2.x line (2.0.0–2.2.0). v3.0.0 is signposted as a
    # breaking release, so cap until it's validated.
    "dramatiq>=2.0,<3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/sylvinus/dramatiq-redis-streams"
Repository = "https://github.com/sylvinus/dramatiq-redis-streams"
Issues = "https://github.com/sylvinus/dramatiq-redis-streams/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dramatiq_redis_streams"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.ruff]
src = ["src", "tests"]
line-length = 120
